= getTask will receive taskId from headers
